# freecad.robotcad

./: .gitignore  .gitmodules  README.md  package.xml  references.md  setup.py
.github/: FUNDING.yml
docker/: .dockerignore  .gitignore  Dockerfile.base  README.md  dockerfile  run.bash
freecad/cross/: LLM_providers.py  SdfUtilities.py  __init__.py  assembly_from_urdf.py  controller.py  controller_proxy.py  exceptions.py  fcui.py  fpo.py  freecad_utils.py  freecadgui_utils.py  generate_robot_by_text.py  import_dae.py  init_gui.py  joint.py  joint_proxy.py  kk_robot.py  link.py  link_proxy.py  mesh_utils.py  observer_proxy.py  parse_sdf.py  placement_utils.py  pose_proxy.py  robot.py  robot_from_urdf.py  robot_proxy.py  sdf.py  sdf_world.py  trajectory_proxy.py  urdf_loader.py  urdf_parser_utils.py  urdf_utils.py  utils.py  vacuum_gripper_proxy.py  wb_constants.py  wb_globals.py  wb_gui_utils.py  wb_utils.py  workcell_proxy.py  (+1 more)
freecad/cross/kinematics/: inverse_kinematics.py  jacobians.py  kinematics.py  models.py
freecad/cross/ros/: node.py  utils.py
freecad/cross/sdf/: export.py  setup.py
freecad/cross/sensors/: sensor.py  sensor_factory.py  sensor_proxy.py  sensor_proxy_joint.py  sensor_proxy_link.py
freecad/cross/ui/: command_assembly_from_urdf.py  command_box_from_bounding_box.py  command_calculate_mass_and_inertia.py  (+45 more)
resources/icons/: world_generator.svg.rst
resources/templates/: CMakeLists.txt  package.xml
resources/ui/: choose_trajectory_dialog.ui  explode_links_dialog.ui  linkEditor.ui  manage_link_display.ui  set_joints.ui  wb_settings.ui
(+51 files in other folders)
