<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">

  <name>RobotCAD</name>
  <description>RobotCAD (FreeCAD OVERCROSS) is a FreeCAD workbench to generate robot description packages (xacro or URDF) for the Robot Operating System.</description>
  <version>10.2.0</version>
  <date>2026-03-16</date>
  <maintainer email="it.project.devel@gmail.com">Vasily S</maintainer>
  <license file="LICENSE">LGPL-2.1-or-later</license>
  <url type="repository" branch="main">https://github.com/drfenixion/freecad.robotcad</url>
  <url type="readme">https://github.com/drfenixion/freecad.robotcad/blob/main/README.md</url>
  <icon>resources/icons/robotcad_overcross_joint.svg</icon>

  <freecadmin>0.21.2</freecadmin>

  <!-- https://https://github.com/stack-of-tasks/pinocchio.
  According to pypi.org, can be installed with `conda install -c conda-forge pinocchio` or `pip install pin`.
  However, it didn't work on Gaël's setup and was installed from robotpkg. `sys.path` is modified by code to
  include the path to this library in /opt/robotpkg/....
  -->
  <!--<depend>pin</depend>-->

  <content>
    <workbench>
      <classname>CrossWorkbench</classname>
      <subdirectory>freecad/robotcad</subdirectory>
      <pythonmin>3.12</pythonmin>
      <conflict type="addon">CROSS</conflict>
    </workbench>
  </content>

</package>
